# comfyui-standard-trigger-words

./: CHANGELOG.md  Example Workflow Using Text Concatenate.json  Example Workflow.json  README.md  __init__.py  pyproject.toml  standard_trigger_node_v2.py
example_workflows/: Example Workflow Using Lora Manager.json  Example Workflow Using Text Concatenate.json
js/: standard_trigger_loader.js
